objects/APL_User_Filter__c.object
<CustomObject>
    <fields>
        <fullName>APL_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>APL Filter</label>
        <referenceTo>APL_Filter__c</referenceTo>
        <relationshipLabel>APL User Filters</relationshipLabel>
        <relationshipName>APL_User_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>APL Oppy Portal Template</label>
        <referenceTo>APL_Oppy_Portal_Template__c</referenceTo>
        <relationshipLabel>APL User Filters</relationshipLabel>
        <relationshipName>APL_User_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APL_User_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>APL User Filter</label>
    <nameField>
        <label>APL User Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>APL User Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>